# dayone-to-obsidian

./: .gitignore  README.md  pyproject.toml
src/jkb/: __main__.py  cli.py  pipeline.py
src/jkb/index/: chunker.py  embedder.py  manifest.py  pipeline.py  vectorstore.py
src/jkb/models/: __init__.py  dayone.py  entry.py
src/jkb/query/: __init__.py  backends.py  parser.py  search.py  synthesizer.py
src/jkb/stages/: __init__.py  attachments.py  body.py  frontmatter.py  parse.py  validate.py  write.py
src/jkb/utils/: __init__.py  checkpoint.py  migration_log.py
tests/: test_checkpoint.py  test_e2e.py  test_migration_log.py  test_models.py  test_pipeline.py  test_smoke.py
tests/index/: test_chunker.py  test_cli_index.py  test_embedder.py  test_pipeline.py  test_vectorstore.py
tests/query/: test_ask_cli.py  test_backends.py  test_parser.py  test_search.py  test_synthesizer.py
tests/stages/: test_attachments.py  test_body.py  test_frontmatter.py  test_parse.py  test_validate.py  test_write.py
