[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jkb"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "pydantic>=2.0",
    "ruamel.yaml",
    "sentence-transformers>=3.0.0",
    "typer",
    "tzdata>=2026.2",
]

[project.scripts]
jkb = "jkb.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/jkb"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
]
